# OpenBoardView

./: .appveyor.yml  .clang-format  .editorconfig  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Project.cmake  README.md
asset/: CMakeLists.txt
lib/: CMakeLists.txt
src/: BDVFile.cpp  BRDBoard.cpp  BRDBoard.h  BRDFile.cpp  BRDFile.h  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  History.cpp  History.h  NetList.cpp  PartList.cpp  PartList.h  main.cpp  platform.cpp  platform.h  platform_unix.cpp  platform_win32.cpp
